[package]
name = "select_indices"
description = "Iterators for taking multiple shared/exclusive references from a slice"
categories = ["rust-patterns", "concurrency"]
keywords = ["indices", "slice", "split", "rayon"]
authors = ["TGRCDev"]
version = "3.0.0"
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/TGRCdev/select_indices"

[dependencies]
rayon = { version = "1.5.1", optional = true }
ndarray = { version = "0.15.4", optional = true }
force-send-sync = { version = "1.0.0", optional = false }

[dev-dependencies]
rand = "0.8.4"
